--- a/AcDotNetTool/AcDotNetTool.csproj
+++ b/AcDotNetTool/AcDotNetTool.csproj
@@ -75,7 +75,11 @@
     <Compile Include="EditEntityTools.cs" />
     <Compile Include="GeometryTools.cs" />
     <Compile Include="HatchTools.cs" />
+    <Compile Include="LineJig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Jigs\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
