--- a/AcDotNetTool/AcDotNetTool.csproj
+++ b/AcDotNetTool/AcDotNetTool.csproj
@@ -31,34 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="accoremgd">
-      <HintPath>..\Lib\CAD\R2014\accoremgd.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="AcCui">
-      <HintPath>..\Lib\CAD\R2014\AcCui.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="acdbmgd">
-      <HintPath>..\Lib\CAD\R2014\acdbmgd.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="acdbmgdbrep">
-      <HintPath>..\Lib\CAD\R2014\acdbmgdbrep.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="acmgd">
-      <HintPath>..\Lib\CAD\R2014\acmgd.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="AcWindows">
-      <HintPath>..\Lib\CAD\R2014\AcWindows.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="AdWindows">
-      <HintPath>..\Lib\CAD\R2014\AdWindows.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -68,14 +40,22 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="ZwDatabaseMgd">
+      <HintPath>..\Lib\ZWCAD\R2014\ZwDatabaseMgd.dll</HintPath>
+    </Reference>
+    <Reference Include="ZwManaged">
+      <HintPath>..\Lib\ZWCAD\R2014\ZwManaged.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddEntityTools.cs" />
     <Compile Include="BaseTools.cs" />
     <Compile Include="DataBaseTools.cs" />
     <Compile Include="EditEntityTools.cs" />
+    <Compile Include="Extensions\PolylineExtension.cs" />
     <Compile Include="GeometryTools.cs" />
     <Compile Include="HatchTools.cs" />
+    <Compile Include="Jigs\ArcJig.cs" />
     <Compile Include="Jigs\LineJig.cs" />
     <Compile Include="Jigs\PolyLineJig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
