--- a/TestCADRegion/TestCADRegion.csproj
+++ b/TestCADRegion/TestCADRegion.csproj
@@ -40,11 +40,22 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="ZwDatabaseMgd">
-      <HintPath>..\Lib\ZWCAD\R2014\ZwDatabaseMgd.dll</HintPath>
+    <Reference Include="ZcWindows">
+      <HintPath>..\Lib\ZWCAD\R2021\ZcWindows.dll</HintPath>
     </Reference>
-    <Reference Include="ZwManaged">
-      <HintPath>..\Lib\ZWCAD\R2014\ZwManaged.dll</HintPath>
+    <Reference Include="ZdWindows">
+      <HintPath>..\Lib\ZWCAD\R2021\ZdWindows.dll</HintPath>
+    </Reference>
+    <Reference Include="ZwDatabaseMgd, Version=1.1.1.8, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\ZWCAD\R2021\ZwDatabaseMgd.dll</HintPath>
+    </Reference>
+    <Reference Include="ZwDatabaseMgdBrep">
+      <HintPath>..\Lib\ZWCAD\R2021\ZwDatabaseMgdBrep.dll</HintPath>
+    </Reference>
+    <Reference Include="ZwManaged, Version=1.1.1.8, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\ZWCAD\R2021\ZwManaged.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
