--- a/AcDotNetTool/AcDotNetTool.csproj
+++ b/AcDotNetTool/AcDotNetTool.csproj
@@ -73,6 +73,7 @@
     <Compile Include="AddEntityTools.cs" />
     <Compile Include="BaseTools.cs" />
     <Compile Include="DataBaseTools.cs" />
+    <Compile Include="DxfTools.cs" />
     <Compile Include="EditEntityTools.cs" />
     <Compile Include="GeometryTools.cs" />
     <Compile Include="HatchTools.cs" />
