--- a/CADModel/CADModel.csproj
+++ b/CADModel/CADModel.csproj
@@ -4,4 +4,6 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties BuildVersion_StartDate="2000/1/1" /></VisualStudio></ProjectExtensions>
+
 </Project>
