--- a/AcDotNetTool/AcDotNetTool.csproj
+++ b/AcDotNetTool/AcDotNetTool.csproj
@@ -76,5 +76,6 @@
 			<Private>False</Private>
 		</Reference>
 	</ItemGroup>
+	<ProjectExtensions><VisualStudio><UserProperties BuildVersion_StartDate="2000/1/1" /></VisualStudio></ProjectExtensions>
 
 </Project>
