添加面域转多段线扩展方法

--- a/TestCADRegion/Properties/launchSettings.json
+++ b/TestCADRegion/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "TestCADRegion": {
       "commandName": "Executable",
-      "executablePath": "C:\\Program Files\\Autodesk\\AutoCAD 2014\\acad.exe"
+      "executablePath": "C:\\Program Files\\Autodesk\\AutoCAD 2014\\acad.exe",
+      "commandLineArgs": "/nologo /b \"start.scr\""
     }
   }
 }
